RESOLVED FIXED131576
[Mac] Crashes when copying or pasting huge images
https://bugs.webkit.org/show_bug.cgi?id=131576
Summary [Mac] Crashes when copying or pasting huge images
Alexey Proskuryakov
Reported 2014-04-11 18:00:13 PDT
WebProcess crashes when copying images that are > 128 Mb in size (especially easy to achieve with animated gifs, which are unpacked into a series of TIFFs). UI Process crashes when pasting huge (and also empty?) data. <rdar://problem/14427398> <rdar://problem/12131833>
Attachments
proposed fix (6.58 KB, patch)
2014-04-11 18:07 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2014-04-11 18:07:23 PDT
Created attachment 229189 [details] proposed fix
WebKit Commit Bot
Comment 2 2014-04-11 20:10:06 PDT
Comment on attachment 229189 [details] proposed fix Clearing flags on attachment: 229189 Committed r167180: <http://trac.webkit.org/changeset/167180>
WebKit Commit Bot
Comment 3 2014-04-11 20:10:13 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 4 2015-12-16 21:34:59 PST
*** Bug 125868 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.